# GoofyVulkanLibrary

./: .gitignore  CMakeLists.txt  COPYING  Doxyfile  README.md
lib/GFVL/core/: GFVL_core.cpp  commandPool.cpp  device.cpp  framebuffer.cpp  instance.cpp  mesh.cpp  pipeline.cpp  renderpass.cpp  shader.cpp  swapchain.cpp  uniformBuffer.cpp  vertexBuffer.cpp  vertexLayout.cpp
lib/GFVL/include/: GFVL.hpp
lib/GFVL/lib/: GFVL_core.hpp  GFVL_definition.hpp  enumPrinter.hpp
src/: fragment_shader.frag  main.cpp  vertex_shader.vert
src/GFVL/: GFVL.cpp  GFVL.hpp  commandPool.cpp  device.cpp  framebuffer.cpp  instance.cpp  mesh.cpp  physicalDevices.cpp  pipeline.cpp  renderpass.cpp  shader.cpp  swapchain.cpp  uniformBuffer.cpp  vertexBuffer.cpp
